--- a/app/src/main/res/layout/activity_p_set_balloon.xml
+++ b/app/src/main/res/layout/activity_p_set_balloon.xml
@@ -61,9 +61,9 @@
 
             <ImageView
                 android:id="@+id/img_balloon"
-                android:layout_width="1dp"
-                android:layout_height="107dp"
-                android:layout_marginTop="64dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="120dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -97,7 +97,7 @@
                 android:id="@+id/img_pointdown"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="108dp"
+                android:layout_marginTop="140dp"
                 android:src="@drawable/pointdown"
                 app:layout_constraintTop_toBottomOf="@+id/imageViewBalloonBackground" />
 
@@ -105,7 +105,7 @@
                 android:id="@+id/textView8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="190dp"
+                android:layout_marginTop="220dp"
                 android:gravity="center_horizontal"
                 android:text="어떤 선물인가요?"
                 android:textColor="#4A4A4A"
