--- a/app/src/main/res/layout/activity_p_home.xml
+++ b/app/src/main/res/layout/activity_p_home.xml
@@ -51,6 +51,7 @@
             app:layout_constraintVertical_bias="0.269"
             app:srcCompat="@drawable/cloud" />
 
+
         <ImageView
             android:id="@+id/cloud1"
             android:layout_width="165dp"
@@ -69,6 +70,36 @@
             app:srcCompat="@drawable/cloud3" />
 
         <ImageView
+            android:id="@+id/cloud3"
+            android:layout_width="144dp"
+            android:layout_height="168dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginVertical="10dp"
+            android:layout_weight="3"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.14"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.499"
+            app:srcCompat="@drawable/cloud3" />
+
+
+        <ImageView
+            android:id="@+id/img_balloon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="@+id/imageView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+        <ImageView
             android:id="@+id/cloud2"
             android:layout_width="133dp"
             android:layout_height="172dp"
@@ -85,22 +116,6 @@
             app:layout_constraintVertical_bias="0.347"
             app:srcCompat="@drawable/cloud3" />
 
-        <ImageView
-            android:id="@+id/cloud3"
-            android:layout_width="144dp"
-            android:layout_height="168dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginVertical="10dp"
-            android:layout_weight="3"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.14"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.499"
-            app:srcCompat="@drawable/cloud3" />
 
         <TextView
             android:id="@+id/textView2"
@@ -191,21 +206,7 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView"
             app:srcCompat="@drawable/pointup" />
 
-        <ImageView
-            android:id="@+id/img_balloon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="168dp"
-            android:layout_weight="3.2"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.86" />
+
 
         <Button
             android:id="@+id/btn_logout"
