--- a/app/src/main/res/layout/navi_header.xml
+++ b/app/src/main/res/layout/navi_header.xml
@@ -14,17 +14,19 @@
     android:gravity="bottom">
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="5dp"
-        app:srcCompat="@mipmap/ic_launcher_round"
         android:contentDescription="navi_header"
-        android:id="@+id/imageView"/>
+        android:paddingTop="5dp"
+        android:paddingLeft="5dp"
+        app:srcCompat="@mipmap/ic_launcher_round" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="5dp"
+        android:paddingLeft="5dp"
         android:text="Prezzy PoP!"
         android:textSize="15dp"
         android:textStyle="bold"
@@ -34,6 +36,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="5dp"
         android:text="Subtitle"
         android:textSize="15dp"
         android:textStyle="bold"
