--- a/app/src/main/res/layout/activity_c_home.xml
+++ b/app/src/main/res/layout/activity_c_home.xml
@@ -30,23 +30,12 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="411dp"
+            android:layout_width="match_parent"
             android:layout_height="464dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginVertical="10dp"
-            android:layout_marginStart="-11dp"
-            android:layout_marginLeft="-11dp"
-            android:layout_marginTop="96dp"
-            android:layout_weight="3"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="80dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.107"
-            app:srcCompat="@drawable/cloud" />
+            app:srcCompat="@drawable/cloud"
+            tools:layout_editor_absoluteX="0dp" />
 
         <ImageView
             android:id="@+id/cloud1"
@@ -63,23 +52,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.145"
-            app:srcCompat="@drawable/cloud3" />
-
-        <ImageView
-            android:id="@+id/cloud2"
-            android:layout_width="133dp"
-            android:layout_height="172dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginVertical="10dp"
-            android:layout_weight="3"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.31"
             app:srcCompat="@drawable/cloud3" />
 
         <ImageView
@@ -100,6 +72,36 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.499"
+            app:srcCompat="@drawable/cloud3" />
+
+
+        <ImageView
+            android:id="@+id/img_balloon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="@+id/imageView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+        <ImageView
+            android:id="@+id/cloud2"
+            android:layout_width="133dp"
+            android:layout_height="172dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginVertical="10dp"
+            android:layout_weight="3"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.31"
             app:srcCompat="@drawable/cloud3" />
 
         <TextView
@@ -171,25 +173,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView"
             app:srcCompat="@drawable/pointup" />
 
-        <ImageView
-            android:id="@+id/imageView4"
-            android:layout_width="165dp"
-            android:layout_height="396dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="182dp"
-            android:layout_marginEnd="112dp"
-            android:layout_marginRight="112dp"
-            android:layout_marginBottom="168dp"
-            android:layout_weight="3.2"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.982"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.313"
-            app:srcCompat="@drawable/img_ballon" />
+
 
         <Button
             android:id="@+id/btn_logout"
