--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -23,7 +23,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="88dp"
         app:layout_constraintTop_toBottomOf="@id/imgView_history1"
-        tools:layout_editor_absoluteX="130dp" />
+        tools:layout_editor_absoluteX="130dp"
+        tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/imgView_history3"
