--- a/app/src/main/res/menu/navi_menu.xml
+++ b/app/src/main/res/menu/navi_menu.xml
@@ -4,17 +4,12 @@
     android:layout_width="match_parent">
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/account"
+            android:id="@+id/history"
             android:icon="@drawable/ic_launcher_foreground"
             style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
             android:title="History"
             />
-        <item
-            android:id="@+id/setting"
-            android:icon="@drawable/ic_launcher_foreground"
-            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-            android:title="설정"
-            />
+
         <item
             android:id="@+id/logout"
             android:icon="@drawable/ic_launcher_foreground"
