--- a/app/src/main/res/layout/activity_p_home.xml
+++ b/app/src/main/res/layout/activity_p_home.xml
@@ -168,12 +168,14 @@
 
 
             <Button
-                android:id="@+id/btn_setballoon"
+                android:id="@+id/btn_setBalloon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Set Balloon"
+                android:layout_marginTop="100dp"
+                android:text="풍선 만들기"
                 android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.51"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/img_balloon" />
         </androidx.constraintlayout.widget.ConstraintLayout>
