--- a/app/src/main/res/layout/activity_c_home.xml
+++ b/app/src/main/res/layout/activity_c_home.xml
@@ -185,35 +185,13 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <EditText
-                android:id="@+id/edit_mission_c"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="28dp"
-                android:layout_marginTop="32dp"
-                android:ems="12"
-                android:hint="자녀에게 미션을 주세요"
-                android:textColor="@color/black"
-                android:textColorHint="#4A4A4A"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/mission_text_c" />
-
-            <Button
-                android:id="@+id/btn_addMission_c"
-                android:layout_width="60dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="34dp"
-                android:background="#EDDF66"
-                android:text="추가"
-                app:layout_constraintStart_toEndOf="@+id/edit_mission_c"
-                app:layout_constraintTop_toBottomOf="@+id/mission_text_c" />
 
             <ListView
-                android:id="@+id/listView_mission"
+                android:id="@+id/listView_mission_c"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/edit_mission_c"></ListView>
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/mission_text_c"></ListView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.sothree.slidinguppanel.SlidingUpPanelLayout>
