--- a/app/src/main/res/layout/activity_p_home.xml
+++ b/app/src/main/res/layout/activity_p_home.xml
@@ -64,7 +64,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.175"
-                app:srcCompat="@drawable/cloud3" />
+                app:srcCompat="@drawable/move_cloud" />
 
             <ImageView
                 android:id="@+id/cloud3"
@@ -81,7 +81,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.499"
-                app:srcCompat="@drawable/cloud3" />
+                app:srcCompat="@drawable/move_cloud" />
 
 
             <ImageView
@@ -110,7 +110,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.347"
-                app:srcCompat="@drawable/cloud3" />
+                app:srcCompat="@drawable/move_cloud" />
 
             <TextView
                 android:id="@+id/text_ach"
