--- a/app/src/main/res/layout/activity_open_present.xml
+++ b/app/src/main/res/layout/activity_open_present.xml
@@ -4,13 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OpenPresentActivity">
+    tools:context=".OpenPresentActivity"
+    android:background="@color/white">
+
+    <nl.dionsegijn.konfetti.KonfettiView
+        android:id="@+id/viewKonfetti"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <ImageView
+        android:id="@+id/imageViewBalloonBackground"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="176dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/cloud"
+        tools:layout_editor_absoluteX="25dp" />
 
     <Button
         android:id="@+id/btn_confirmPresent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="136dp"
         android:text="선물 수령"
-        tools:layout_editor_absoluteX="169dp"
-        tools:layout_editor_absoluteY="590dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
